assets/css/_contact.scss
.contact-us-page-container{
	.content-margins {
		display: flex;
		justify-content: space-between;
		flex-wrap: wrap;
		width: 100%;
		flex-direction: row;

	}

	.contact__left, .contact__right {
		width: 50%;
	}
	.contact-info, .hours {
		height: 50vh;
	}
	.contact__title {
		font-family: $knockout-lite;
	    font-weight: initial;
	    font-size: 14em;
	    padding-top: 0.3em;
	    color: $mid_grey;
	    margin-bottom: 0.15em;
	    text-transform: uppercase;
	}
	
	.info-red, .info-red p, .info-red a {
	    text-transform: uppercase;
	   	font-family: $knockout-lite;
	    font-weight: initial;
	    color: $toro_red;
	    font-size: 4.8rem;
	    line-height: 0.95em;
	    letter-spacing: 1.5px;
	}
	.info-red a {
		text-decoration: underline;
	}
	.info-grey {
		 text-transform: uppercase;
		   	font-family: $knockout-lite;
		    font-weight: initial;
		    color: $mid_grey;
		    font-size: 4rem;
		    line-height: 0.95em;
		    letter-spacing: 1.4px;
	}
	.address {
		margin-bottom: 0.5em;
	}
	.hours__info {
		display: inline-block;
	}
	.map-section {
		width: 100%;
		height: 61vh;
	}
	#map-container {
		width: 100%;
		height: 100%;
		border: 3px solid $toro_red;
		padding: 2em;
	}
	#map {
            width: 100%;
            height: 100%;
	}
	@media screen and (max-width: 1024px) {
		.contact__left {
			width: 40%;

		}
		.contact__right {
			width: 60%;
		}
	}
	@media screen and (max-width: $mobile_max) {
		.contact__left, .contact__right {
			width: 100%;
		}
		.contact-info, .hours {
			height: auto;
		}
		.contact-info, .hours {
			margin-bottom: 6em;
		}
		.map-section {
			margin-bottom: 18em;
		}
	}
}

/*body {
	background-color: blue;
}*/

